--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
     "@ionic/angular": "^7.0.0",
+    "font-awesome": "^4.7.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
